--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,13 +1,16 @@
-<p>search works!</p>
-<input
-  #search
-  (keyup.enter)="searchBooks(search.value)"
-  (blur)="searchBooks(search.value); search.value = ''"
-/>
-<button type="button" (click)="searchBooks(search.value)">Add</button>
+<div>
+  <p>search works!</p>
+  <input
+    #search
+    (keyup.enter)="searchBooks(search.value)"
+    (blur)="searchBooks(search.value); search.value = ''"
+  />
+  <button type="button" (click)="searchBooks(search.value)">Add</button>
 
-<ul>
-  <li *ngFor="let book of books">
-    {{ book[0] }}
-  </li>
-</ul>
+  <ul>
+    <li *ngFor="let book of books" >
+      {{ book[0] }}
+    </li>
+  </ul>
+  <app-bookdetails></app-bookdetails>
+</div>
