--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,7 +8,7 @@
   <button type="button" (click)="searchBooks(search.value)">Add</button>
 
   <ul>
-    <li *ngFor="let book of books" >
+    <li *ngFor="let book of books" (click)="bookInfo(book[1])">
       {{ book[0] }}
     </li>
   </ul>
