--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,5 +12,5 @@
       {{ book[0] }}
     </li>
   </ul>
-  <app-bookdetails></app-bookdetails>
+  <app-bookdetails [bookdetails]="bookDetails"></app-bookdetails>
 </div>
