--- a/src/app/search/bookdetails/bookdetails.component.html
+++ b/src/app/search/bookdetails/bookdetails.component.html
@@ -1,6 +1,31 @@
-<div *ngIf="bookdetails">
-  <h2>{{ bookdetails.title }}</h2>
-  <h4>{{ bookdetails.description }}</h4>
-  <h3>{{ bookdetails.created }}</h3>
-  <h3>{{ bookdetails.modified }}</h3>
+<div class="continer">
+  <div class="row" *ngIf="bookdetails">
+    <h2
+      class="badge bg-secondary fs-3 fw-bolder text-decoration-none text-dark d-block form-control rounded-pill border-dark border-4"
+      *ngIf="bookdetails.title"
+    >
+      Book Title
+      {{ bookdetails.title }}
+    </h2>
+    <h4
+      class="badge bg-secondary fs-3 fw-bolder text-decoration-none text-dark d-block form-control rounded-pill border-dark border-4"
+      *ngIf="bookdetails.description"
+    >
+      {{ bookdetails.description }}
+    </h4>
+    <h3
+      class="badge bg-secondary fs-3 fw-bolder text-decoration-none text-dark d-block form-control rounded-pill border-dark border-4"
+      *ngIf="bookdetails.created"
+    >
+      First Book Date :
+      {{ bookdetails.created }}
+    </h3>
+    <h3
+      class="badge bg-secondary fs-4 fw-bolder text-decoration-none text-dark d-block form-control rounded-pill border-dark border-4"
+      *ngIf="bookdetails.modified"
+    >
+      Last Modified Date :
+      {{ bookdetails.modified }}
+    </h3>
+  </div>
 </div>
