--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -26,7 +26,7 @@
         *ngFor="let book of books ;let indexOfelement=index;"
 
       >
-        {{ indexOfelement +1}}        {{ book[0] }}
+        {{ indexOfelement +1 }}.        {{ book[0] }}
       </li>
     </ul>
   </div>
